--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,5 +14,30 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/start_activity_sign_in"
+        android:text="SIGNIN"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+    <Button
+        android:id="@+id/start_activity_map"
+        android:text="MAP"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/start_activity_sign_in"
+        />
+    <Button
+        android:id="@+id/start_activity_send_current_location"
+        android:text="SEND LOCATION"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/start_activity_map"
+        />
+
 
 </android.support.constraint.ConstraintLayout>
