recycler, registration layout, sign in layout

--- a/app/src/main/res/layout/content_activity_choosecountry.xml
+++ b/app/src/main/res/layout/content_activity_choosecountry.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignInActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="academy.team8.com.footballfanlocator.ActivityChooseCountry"
+    tools:showIn="@layout/activity_choosecountry">
+
 
 
 </android.support.constraint.ConstraintLayout>
