--- a/app/src/main/res/layout/item_country.xml
+++ b/app/src/main/res/layout/item_country.xml
@@ -15,10 +15,11 @@
     <TextView
         android:id="@+id/country_name_text_view"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:textColor="@color/colorBlack"
         android:textSize="25sp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="25dp"
+        android:paddingTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/country_flag_image_view" />
 
