--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,5 +5,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:background="@drawable/football"
-        tools:context=".MainActivity">
+        tools:context=".activities.MainActivity">
     </android.support.constraint.ConstraintLayout>
